correct serializer register, login, logout with swagger, drf json, and django forms, tokens

--- a/app/templates/accounts/register_email_response.html
+++ b/app/templates/accounts/register_email_response.html
@@ -1,2 +1,2 @@
-Your register token valid {{ user.email }} {{messages}}
+Your register token valid {{ user.email }} {{email}}
 <a href="{% url 'accounts:login_panel' %}">Login</a>
