--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -9,7 +9,19 @@
         <link rel="stylesheet" href="" />
     </head>
     <body>
-        <p>hello</p>
+        <p>hello in main page</p>
+        <p>
+            {% if user.is_authenticated %} {{user.email}}
+            <button class="btn btn-primary"><a href="{% url 'accounts:logout_panel' %}">Wyloguj</a></button>
+            {% else %} no login user {% endif %}
+            {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </p>
         {% block accounts_blocks %} {% endblock accounts_blocks %}
     </body>
 </html>
